#ifndef BULLSANDCOWS_SRC_INTERFACES_IRENDERED_H_
#define BULLSANDCOWS_SRC_INTERFACES_IRENDERED_H_

class IRendered
{
 public:
  virtual void Render() = 0;
};
#endif //BULLSANDCOWS_SRC_INTERFACES_IRENDERED_H_
