#ifndef BULLSANDCOWS_SRC_INTERFACES_IUPDATABLEEVENTS_H_
#define BULLSANDCOWS_SRC_INTERFACES_IUPDATABLEEVENTS_H_

class IUpdatableEvents
{
 public:
  virtual void UpdateEvents() = 0;
};

#endif //BULLSANDCOWS_SRC_INTERFACES_IUPDATABLEEVENTS_H_
